# gtypist

./: .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  INSTALL  INSTALL.in  Makefile.am  Makefile.in  NEWS  QUESTIONS  README  README.CVS  README.git  StandardQuestions  THANKS  TODO  acconfig.h  aclocal.m4  autogen.sh  conf_dos.bat.in  config.h.in  configur.bat  configur.bat.in  configure  configure-w32.in  configure.ac  configure.in  configure.in.in  cursmenu.c  cursmenu.h  error.c  error.h  gettext.h  gtypist.1  gtypist.c  gtypist.h  mkinstalldirs  script.c  script.h  typefortune  (+2 more)
doc/: ChangeLog  Makefile.am  Makefile.in  fdl.texi  gtypist-cs.texi  gtypist.cs.texi  gtypist.cz.texi  gtypist.es.texi  gtypist.info  gtypist.texi  gtypist.texinfo
lessons/: ChangeLog  Makefile.am  Makefile.in  c.typ  cs.typ  cz.typ  d.typ  demo.typ  esp.typ  german.ktouch.typ  gtypist.typ  ktde.typ  ktde2.typ  ktdk.typ  ktdk2.typ  ktdvorak.typ  kten.typ  ktfr.typ  ktfr2.typ  ktlecten.typ  ktno.typ  ktnumber.typ  ktouchde.typ  ktouchen.typ  ktouchfr.typ  ktouchno.typ  m.typ  n.typ  q.typ  r.typ  ru.typ  s.typ  t.typ  tinydemo.typ  tr.typ  ttde.typ  u.typ  v.typ
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  cat-id-tbl.c  cs.po  cz.po  de.gmo  de.po  es.gmo  es.po  eu.po  fi.po  fr.po  gtypist.pot  nl.po  pl.po  ru.po  tr.po  zh_CN.po  zh_TW.po
src/: ChangeLog  Makefile.am  banner.c  banner.h  cmdline.c  cmdline.ggo  cmdline.h  cursmenu.c  cursmenu.h  error.c  error.h  getopt.c  getopt.h  getopt1.c  gtypist.c  gtypist.h  infoview.c  infoview.h  script.c  script.h  speedbox.c  speedbox.h  utf8.c  utf8.h
tools/: Makefile.am  Makefile.in  findwords  findwords.sh  gtypist-mode.el  gtypist.pm  gtypist.vim  ktouch2typ.pl  ktouch2typ.scm  ktouchOLD2typ.pl  tt2typ.pl  typcombine  typv1tov2
