## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.7.7 dist-bzip2

SUBDIRS = m4 po intl lessons tools doc src

man_MANS = typefortune.1

EXTRA_DIST = config.rpath mkinstalldirs typefortune src/gtypist.1 typefortune.1\
	configur.bat version.sh configur.bat.in autogen.sh \
	INSTALL.in TODO QUESTIONS

ACLOCAL_AMFLAGS = -I m4
