## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.8.2 dist-bzip2

SUBDIRS = m4 po intl lessons tools doc src

man_MANS = typefortune.1

EXTRA_DIST = config.rpath mkinstalldirs typefortune src/gtypist.1 typefortune.1\
	configur.bat conf_dos.bat version.sh configur.bat.in conf_dos.bat.in\
    conf_dos.bat.in autogen.sh INSTALL.in TODO QUESTIONS

ACLOCAL_AMFLAGS = -I m4
