## Process this file with automake to produce Makefile.in

SUBDIRS = m4 po intl lessons tools doc src

dist_bin_SCRIPTS = typefortune
man_MANS = typefortune.1

EXTRA_DIST = config.rpath mkinstalldirs src/gtypist.1 typefortune.1\
	configur.bat conf_dos.bat version.sh configur.bat.in conf_dos.bat.in\
	autogen.sh INSTALL.in TODO QUESTIONS

ACLOCAL_AMFLAGS = -I m4
