## Process this file with automake to produce Makefile.in

pkgdata_DATA =  gtypist.typ \
		d.typ \
		demo.typ \
		esp.typ \
		cs.typ \
		ru.typ \
		m.typ \
		n.typ \
		q.typ \
		r.typ \
		s.typ \
		t.typ \
		u.typ \
		v.typ \
		ttde.typ \
		bulgarian.ktouch.typ \
		bulgarian_long.ktouch.typ \
		catalan.ktouch.typ \
		danish2.ktouch.typ \
		danish.ktouch.typ \
		dvorak_ABCD.ktouch.typ \
		dvorak_es.ktouch.typ \
		dvorak.ktouch.typ \
		english.ktouch.typ \
		finnish_for_kids.ktouch.typ \
		finnish.ktouch.typ \
		french2.ktouch.typ \
		french.ktouch.typ \
		german2.ktouch.typ \
		german3.ktouch.typ \
		german.ktouch.typ \
		german.neo.ktouch.typ \
		german.number.ktouch.typ \
		hungarian_expert.ktouch.typ \
		hungarian.ktouch.typ \
		italian.ktouch.typ \
		nederlands_junior.ktouch.typ \
		nederlands.ktouch.typ \
		norwegian.ktouch.typ \
		polish.ktouch.typ \
		russian.ktouch.typ \
		russian_long.ktouch.typ \
		russian_slava.ktouch.typ \
		slovenian.ktouch.typ \
		spanish.ktouch.typ

# ktde.typ \
# ktdk2.typ \
# kten.typ \
# ktfr2.typ \
# ktnumber.typ \
# ktdk.typ \
# ktdvorak.typ \
# ktfr.typ \
# ktno.typ 

EXTRA_DIST= $(pkgdata_DATA)
