## Process this file with automake to produce Makefile.in

pkgdata_DATA =  gtypist.typ \
		c.typ \
		d.typ \
		demo.typ \
		esp.typ \
		cs.typ \
		ru.typ \
		m.typ \
		n.typ \
		q.typ \
		r.typ \
		s.typ \
		t.typ \
		u.typ \
		v.typ \
		ttde.typ \
		ktbg.typ \
		ktbg_long.typ \
		ktes_cat.typ \
		ktdk2.typ \
		ktdk.typ \
		ktdvorak_abcd.typ \
		ktdvorak_es.typ \
		ktdvorak.typ \
		kten.typ \
		ktfi_kids.typ \
		ktfi.typ \
		ktfr2.typ \
		ktfr.typ \
		ktde2.typ \
		ktde.typ \
		ktde_neo.typ \
		ktde_number.typ \
		kthu_expert.typ \
		kthu.typ \
		ktit.typ \
		ktnl_junior.typ \
		ktnl.typ \
		ktno.typ \
		ktpl.typ \
		ktru.typ \
		ktru_long.typ \
		ktru_slava.typ \
		ktsi.typ \
		ktes.typ

# ktde.typ \
# ktdk2.typ \
# kten.typ \
# ktfr2.typ \
# ktnumber.typ \
# ktdk.typ \
# ktdvorak.typ \
# ktfr.typ \
# ktno.typ 

EXTRA_DIST= $(pkgdata_DATA)
