## Process this file with automake to produce Makefile.in

pkgdata_DATA =  gtypist.typ \
		c.typ \
		d.typ \
		demo.typ \
		esp.typ \
		cs.typ \
		ru.typ \
		m.typ \
		n.typ \
		q.typ \
		r.typ \
		s.typ \
		t.typ \
		u.typ \
		v.typ \
		ttde.typ \
		ktbg.typ \
		ktbg_long.typ \
		ktde.typ \
		ktde2.typ \
		ktde_neo.typ \
		ktde_number.typ \
		ktdk.typ \
		ktdk2.typ \
		ktdvorak.typ \
		ktdvorak_abcd.typ \
		ktdvorak_es.typ \
		kten.typ \
		ktes.typ \
		ktes_cat.typ \
		ktfi.typ \
		ktfi_kids.typ \
		ktfr.typ \
		ktfr2.typ \
		kthu.typ \
		kthu_expert.typ \
		ktit.typ \
		ktnl.typ \
		ktnl_junior.typ \
		ktno.typ \
		ktpl.typ \
		ktru.typ \
		ktru_long.typ \
		ktru_slava.typ \
		ktsi.typ \
		kttr.typ

EXTRA_DIST= $(pkgdata_DATA)
